# juntagrico-list-gen

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
juntagrico_list_gen/: apps.py  juntagricoapp.py  models.py  settings.py  urls.py  views.py
juntagrico_list_gen/migrations/: 0001_initial.py
juntagrico_list_gen/static/lg/: generate_lists.js  style.css
juntagrico_list_gen/templates/juntagrico/menu/admin/: lists.html
juntagrico_list_gen/templates/lg/: menu_generate_lists.html
